--- a/style.css
+++ b/style.css
@@ -1,154 +1,36 @@
-:root {
-    --body-bg-color: rgb(223, 223, 223);
-    --bg-color: white;
-    --fg-color: black;
-    --focus-bg: rgb(56, 56, 56);
-    --focus-invert-bg: rgb(200, 200, 200);
-    /* battery */
-    --border-radius: 5px;
-    --animated-drop-down: max-height 0.15s ease-in-out;
-    /* battery */
-    scrollbar-width: none;
-}
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background-color: var(--body-bg-color);
-    color: var(--fg-color);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-}
-
-body.dark {
-    --bg-color: black;
-    --fg-color: white;
-}
-
-/* @media (prefers-color-scheme: dark) {
-    body {
-        --bg-color: black;
-        --body-bg-color: black;
-        --fg-color: white;
-        --focus-bg: rgb(200, 200, 200);
-        --focus-invert-bg: rgb(56, 56, 56);
-    }
-} */
-
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 100;
-    border-bottom: 1px solid grey;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0.25em;
-    flex-direction: row;
-    gap: 1rem;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: var(--fg-color);
-}
-
-a {
-    background-color: var(--fg-color);
-    color: var(--bg-color);
-    text-decoration: none;
-}
-
-header a {
-    font-size: medium;
-}
-
-header button {
-    background-color: var(--bg-color);
-    color: var(--fg-color);
-}
-
-header button:hover {
-    background-color: var(--focus-invert-bg);
-}
-
-button {
-    cursor: pointer;
-    padding: 5px 5px;
-    border: none;
-    border-radius: var(--border-radius);
-    color: var(--bg-color);
-    background-color: var(--fg-color);
-    justify-content: center;
-    align-items: center;
-    font-size: large;
-}
-
-button:hover {
-    background-color: var(--focus-bg);
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .engine-bar {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.25em;
-    margin: 15px 10px 5px 10px;
+    gap: .25em;
+    margin: 15px 10px 5px 10px
 }
 
 .search {
     display: flex;
-    padding: 0.25rem 1rem;
+    padding: .25rem 1rem;
     align-items: center;
     width: 100%;
     justify-content: space-around;
     height: 50px;
     background-color: var(--fg-color);
-    border-radius: var(--border-radius);
-}
-
-input {
-    outline: none;
-    border: none;
-    width: 100%;
-    padding: 0.5rem;
-    background-color: var(--fg-color);
-    color: var(--bg-color);
-    font-size: large;
-}
-
-input::placeholder {
-    color: var(--bg-color);
-    font-size: medium;
+    border-radius: var(--border-radius)
 }
 
 .search-drop {
     position: relative;
-    margin-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: auto;
     min-width: 50vw;
-    max-width: 90vw;
+    max-width: 90vw
 }
 
 .search Strong {
     color: var(--bg-color);
-    letter-spacing: 0.25rem;
+    letter-spacing: .25rem;
     font-weight: 500;
-    font-size: large;
+    font-size: large
 }
 
 .dropdown {
@@ -160,52 +42,46 @@ input::placeholder {
     display: flex;
     flex-direction: column;
     border-radius: var(--border-radius);
-    border: 2px solid var(--bg-color);
+    border: 2px solid var(--body-bg-color);
     background-color: var(--fg-color);
     height: auto;
     overflow-y: scroll;
     scrollbar-width: none;
     max-height: 0;
-    transition: var(--animated-drop-down);
+    transition: var(--animated-drop-down)
 }
 
 .search-drop:focus-within .dropdown {
     max-height: 40vh;
+    padding: 2.5px
 }
 
 .dropdown a {
     display: flex;
-    padding: 0.35rem;
+    padding: .35rem;
     justify-content: space-between;
-    letter-spacing: 0.15rem;
-    text-decoration: none;
+    letter-spacing: .15rem
 }
 
 .dropdown a:hover {
-    background-color: var(--focus-bg);
+    background-color: var(--focus-bg)
 }
 
 .dropdown a:first-child {
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
-    padding-top: 0.5rem;
+    padding-top: .5rem
 }
 
 .dropdown a:last-child {
     border-bottom-left-radius: inherit;
     border-bottom-right-radius: inherit;
-    padding-bottom: 0.5rem;
+    padding-bottom: .5rem
 }
 
 .dropdown a p:nth-child(2) {
     font-size: small;
-    letter-spacing: normal;
-}
-
-hr {
-    margin: 0.1rem 0;
-    align-self: center;
-    width: 99%;
+    letter-spacing: normal
 }
 
 .shortcuts {
@@ -213,7 +89,7 @@ hr {
     flex-wrap: wrap;
     max-width: 90vw;
     margin: 15px auto;
-    gap: 15px;
+    gap: 15px
 }
 
 .shortcuts div {
@@ -223,50 +99,33 @@ hr {
     text-align: center;
     gap: 5px;
     font-size: larger;
-    letter-spacing: 0.1rem;
+    letter-spacing: .1rem
 }
 
 .shortcuts div a {
     padding: 1rem 1rem;
-    border-radius: var(--border-radius);
+    border-radius: var(--border-radius)
 }
 
 .shortcuts div button {
     height: 50px;
-    width: 50px;
-}
-
-footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 100;
-    padding: 0.25rem 1rem;
-    background-color: var(--fg-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-top: 1px solid grey;
+    width: 50px
 }
 
 .right-footer {
     display: flex;
-    gap: 15px;
+    flex-wrap: wrap;
+    gap: 15px
 }
 
 footer button {
-    background-color: black;
-    justify-content: center;
+    background-color: #000;
+    justify-content: center
 }
 
 footer button:hover {
-    background-color: rgb(70, 70, 70);
+    background-color: #464646
 }
-
-/* .edit-quick {
-    display: none;
-} */
 
 .edit-quick {
     position: fixed;
@@ -276,23 +135,22 @@ footer button:hover {
     width: 100vw;
     height: 100vh;
     display: none;
-    /* flex */
     flex-direction: column;
     justify-content: center;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgb(0 0 0 / .4)
 }
 
 .tab .buttonsel {
     background-color: var(--bg-color);
-    color: var(--fg-color);
+    color: var(--fg-color)
 }
 
 .tab button {
     border: 1px solid var(--bg-color);
     border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
+    border-bottom-right-radius: 0
 }
 
 .tab {
@@ -300,9 +158,8 @@ footer button:hover {
     width: 400px;
     border-radius: var(--border-radius);
     padding-top: 5px;
-    padding-left: 5px;
+    padding-left: 5px
 }
-
 
 .edit-quick form {
     width: 400px;
@@ -310,14 +167,11 @@ footer button:hover {
     background-color: var(--bg-color);
     border-bottom: 2px solid var(--fg-color);
     border-left: 2px solid var(--fg-color);
-    border-right: 2px solid var(--fg-color);
+    border-right: 2px solid var(--fg-color)
 }
 
-
-/* .edit-quick form:first-child{
-} */
 .edit-quick form {
-    border-radius: var(--border-radius);
+    border-radius: var(--border-radius)
 }
 
 #rearrange div {
@@ -326,15 +180,15 @@ footer button:hover {
     justify-content: center;
     justify-content: space-between;
     padding: 5px;
-    flex-direction: row;
+    flex-direction: row
 }
 
 #rearrange div div {
-    gap: 5px;
+    gap: 5px
 }
 
 #rearrange div button {
-    background-color: var(--bg-color);
+    background-color: var(--bg-color)
 }
 
 #modify {
@@ -344,22 +198,22 @@ footer button:hover {
     align-items: start;
     gap: 10px;
     padding: 10px;
-    color: var(--fg-color);
+    color: var(--fg-color)
 }
 
 #modify button:first-of-type {
     background-color: red;
-    color: white;
+    color: #fff
 }
 
 #add {
     padding: 10px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 10px
 }
 
 #add button {
     background-color: green;
-    color: white;
+    color: #fff
 }
