--- a/css/nonbattery.css
+++ b/css/nonbattery.css
@@ -11,10 +11,6 @@
     border-radius: var(--border-radius);
 }
 
-.shortcuts div a {
-    border-radius: var(--border-radius)
-}
-
 .edit-quick form {
     border-radius: var(--border-radius)
 }
@@ -28,6 +24,27 @@
     border-radius: var(--border-radius);
 }
 
-.game-clock {
-    border-radius: var(--border-radius);
+
+@media(min-width:1100px) {
+    main {
+        display: grid;
+        margin: 2rem;
+        grid-template-columns: 1.5fr 1fr;
+        grid-template-rows: auto;
+        align-items: start;
+        grid-template-areas: "mainleft mainright";
+    }
+
+    .main-right {
+        position: relative;
+        top: 10%;
+        grid-area: mainright;
+        width: 100%;
+    }
+
+    .main-left {
+        grid-area: mainleft;
+        display: flex;
+        flex-direction: column;
+    }
 }
