--- a/style.css
+++ b/style.css
@@ -20,9 +20,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: auto;
-    min-width: 50vw;
-    max-width: 90vw
+    margin: 2px;
 }
 
 .search Strong {
@@ -185,28 +183,25 @@
     color: #fff
 }
 
-.game-clock {
-    display: flex;
-    align-items: center;
-    width: clamp(50vw, 800px, 90%);
-    position: relative;
-    border: 1px solid var(--fg-color);
-}
-
-.clock {
-    opacity: 1;
-    position: absolute;
-    right: 10%;
-    display: flex;
-    flex-direction: column;
-    row-gap: 1rem;
-    transition: opacity 0.3s ease;
-    z-index: 10;
-}
-
-.clock.hidden {
-    opacity: 0;
-}
-.main-right{
+.main-right {
     width: 100%;
+}
+
+.essentials {
+    display: flex;
+    gap: 1rem;
+    margin: 0.5rem;
+}
+
+.essentials button {
+    display: flex;
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
+.essentials button p {
+    margin: 0;
+    font-size: 1.5rem;
+    line-height: 1;
+    display: inline-block;
 }
