minor bug fixes

--- a/css/nonbattery.css
+++ b/css/nonbattery.css
@@ -45,6 +45,7 @@
     .main-left {
         grid-area: mainleft;
         display: flex;
+        width: auto;
         flex-direction: column;
     }
 }
