--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
     display: flex;
     padding: .25rem 1rem;
     align-items: center;
-    width: 100%;
     justify-content: space-around;
     height: 50px;
     background-color: var(--fg-color);
@@ -69,9 +68,10 @@
 }
 
 .shortcuts {
+    justify-self: center;
     display: flex;
     flex-wrap: wrap;
-    max-width: 90vw;
+    padding: 0 auto;
     margin: 15px auto;
     gap: 15px
 }
@@ -97,7 +97,7 @@
     font-size: 1rem;
 }
 
-.right-footer {
+/* .right-footer {
     display: flex;
     flex-wrap: wrap;
     gap: 15px
@@ -186,7 +186,7 @@
 #add button {
     background-color: green;
     color: #fff
-}
+} */
 
 .main-right {
     width: 100%;
@@ -209,4 +209,7 @@
     font-size: 1.5rem;
     line-height: 1;
     display: inline-block;
+}
+.main-left{
+    width: 80%;
 }
