--- a/css/game_resp.css
+++ b/css/game_resp.css
@@ -18,7 +18,14 @@
     .main-left {
         grid-area: mainleft;
         display: flex;
-        width: auto;
+        width: 100%;
         flex-direction: column;
     }
 }
+/* .main-right {
+    width: 100%;
+}
+
+.main-left {
+    width: 80%;
+} */
